| Summary: | ASTERISK-22673: OPTIONS packets doesn't comply with endpoint outbound_proxy setting | ||
| Reporter: | Antti Yrjölä (ayrjola) | Labels: | |
| Date Opened: | 2013-10-09 13:57:01 | Date Closed: | 2013-12-14 11:26:14.000-0600 |
| Priority: | Major | Regression? | |
| Status: | Closed/Complete | Components: | Channels/chan_pjsip |
| Versions: | 12.0.0-alpha1 | Frequency of Occurrence | Constant |
| Related Issues: | |||
| Environment: | 3.2.0-4-amd64 #1 SMP Debian 3.2.46-1+deb7u1 x86_64 GNU/Linux | Attachments: | |
| Description: | Setting qualify_frequency and outbound_proxy for endpoint, but asterisk keeps sending OPTIONS packets directly to endpoint. I think OPTIONS packets should honor also the outbound_proxy setting. | ||
| Comments: | By: Antti Yrjölä (ayrjola) 2013-10-09 13:59:08.749-0500 Endpoint config: [6001] type=endpoint transport=transport-udp context=from-internal outbound_proxy=192.168.56.102 disallow=all allow=ulaw ;allow=gsm auth=6001 aors=6001 [6001] type=auth auth_type=userpass password=6001 username=6001 [6001] type=aor max_contacts=1 qualify_frequency=10 ; Interval at which to qualify an AoR (default: "0") ;contact=sip:6001@192.0.2.1:5060 By: Antti Yrjölä (ayrjola) 2013-10-09 14:01:02.110-0500 I have production 1.8.? version with chan_sip that have same behavior, that it also doesn't honor outbound_proxy setting for qualify. By: Rusty Newton (rnewton) 2013-10-16 15:51:19.044-0500 Hey Antti! It was nice meeting you at the DevCon! Thanks for including the pjsip.conf. In the future you can always attach those as separate files to the issue under (More Actions > Attach Files). Can you attach an Asterisk full log (with verbose and debug type messages, plus the SIP packets) showing the issue, just so we can be very clear about the current behavior in your setup? If Asterisk has never behaved this way, then this may really be a feature request unless it is going against an RFC. Thanks! | ||